<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_cream"
    tools:context=".Activity.MainActivity2">

    <!-- SCROLLABLE CONTENT -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- PROFILE BAR -->
            <LinearLayout
                android:id="@+id/profileBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/profile"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="Hi user, welcome back"
                    android:textColor="@color/dark_brown"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="43dp"
                    android:layout_height="40dp"
                    android:background="@drawable/img_icon"
                    android:padding="12dp"
                    android:src="@drawable/bellicon"/>
            </LinearLayout>

            <!-- SEARCH BAR -->
            <LinearLayout
                android:id="@+id/searchBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/profileBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/editTextText2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/full_white_bg"
                    android:drawableStart="@drawable/search_icon"
                    android:drawablePadding="8dp"
                    android:hint="@string/Search_Anything"
                    android:padding="8dp"/>

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/img_icon"
                    android:padding="12dp"
                    android:src="@drawable/settings"/>
            </LinearLayout>

            <!-- SEARCH RESULTS RECYCLERVIEW -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchResultsRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/searchBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/banner" />

            <!-- BANNER -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/banner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@id/searchBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="16:9"
                app:shapeAppearanceOverlay="@style/CircleCornerImageView"
                tools:srcCompat="@tools:sample/backgrounds/scenic"/>

            <ProgressBar
                android:id="@+id/progressBarbanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/banner"
                app:layout_constraintBottom_toBottomOf="@id/banner"
                app:layout_constraintStart_toStartOf="@id/banner"
                app:layout_constraintEnd_toEndOf="@id/banner"/>

            <!-- CATEGORIES TITLE -->
            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Categories"
                android:textColor="@color/dark_brown"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/banner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- CATEGORY LIST -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryTitle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/popularHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCategories" />

            <ProgressBar
                android:id="@+id/progressBarCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/categoryTitle"
                app:layout_constraintBottom_toBottomOf="@id/categoryTitle"
                app:layout_constraintStart_toStartOf="@id/categoryTitle"
                app:layout_constraintEnd_toEndOf="@id/categoryTitle"/>

            <!-- POPULAR HEADER -->
            <LinearLayout
                android:id="@+id/popularHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/categoryTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Popular Coffees"
                    android:textColor="@color/dark_brown"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="See all"
                    android:textColor="@color/dark_brown"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- POPULAR LIST -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPopular"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/popularHeader" />

            <ProgressBar
                android:id="@+id/progressBarPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/recyclerViewPopular"
                app:layout_constraintBottom_toBottomOf="@id/recyclerViewPopular"
                app:layout_constraintStart_toStartOf="@id/recyclerViewPopular"
                app:layout_constraintEnd_toEndOf="@id/recyclerViewPopular"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- BOTTOM NAVIGATION -->
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Explore -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/navExplore"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/btn1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_explore"
                android:textColor="@color/dark_brown"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Cart -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/navCart"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/btn2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_cart"
                android:textColor="@color/dark_brown"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Wishlist -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/navWishlist"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/btn3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_wishlist"
                android:textColor="@color/dark_brown"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Orders -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/navOrders"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:src="@drawable/btn4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_my_order"
                android:textColor="@color/dark_brown"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Profile -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/navProfile"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="25dp"
                android:src="@drawable/coofeicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_profile"
                android:textColor="@color/dark_brown"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
